--- a/stdHTML.html
+++ b/stdHTML.html
@@ -8,10 +8,11 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css">
 </head>
 <body>
+<header>
+    <img src="Img/bannerCS1.png" height="400" width="100%"/>
+</header>
 <div class="container">
-    <header>
-        <h1>Quản Lý Học Viên</h1>
-    </header>
+
     <div class="form-container">
         <h2>Thông tin học viên</h2>
         <label for="studentId">ID:</label>
