--- a/stdHTML.html
+++ b/stdHTML.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <header>
-    <img src="Img/bannerCS1.png" height="400" width="100%"/>
+    <img src="Img/bannerCS1.png" height="400" width="100%" alt="Banner"/>
 </header>
 <div class="container">
 
